--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,3 +11,21 @@
 .divider {
   border: 1px solid #777;
 }
+
+.gridWrapper {
+  margin: 40px 0;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+}
+
+.cell {
+  margin: 4px;
+  height: 80px;
+  width: 70px;
+  font-size: 60px;
+  line-height: 75px;
+  border: 1px solid #aaa;
+}
