--- a/src/styles/Animations.module.css
+++ b/src/styles/Animations.module.css
@@ -14,3 +14,30 @@
     transform: rotateX(90deg);
   }
 }
+
+.press {
+  animation-name: press;
+  animation-duration: 100ms;
+  animation-timing-function: ease;
+  border: 2px solid #666;
+}
+
+@keyframes press {
+  0% {
+    opacity: 0.8;
+    border: 2px solid #333;
+    transfrom: scale(0.85);
+  }
+
+  50% {
+    opacity: 0.9;
+    border: 2px solid #555;
+    transform: scale(1.1);
+  }
+
+  100% {
+    opacity: 1;
+    border: 2px solid #666;
+    transform: scale(1);
+  }
+}
