--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,38 @@ body {
   margin: 0;
   padding: 0;
   color: #eee;
-  background-color: #333;
+  background-color: #111;
   text-transform: uppercase;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+@keyframes flip {
+  0% {
+    transform: rotateX(45deg);
+  }
+
+  25% {
+    transform: rotateX(90deg);
+  }
+}
+
+@keyframes press {
+  0% {
+    opacity: 0.8;
+    border: 2px solid #3a3a3a;
+    transfrom: scale(0.85);
+  }
+
+  50% {
+    opacity: 0.9;
+    border: 2px solid #3a3a3a;
+    transform: scale(1.1);
+  }
+
+  100% {
+    opacity: 1;
+    border: 2px solid #3a3a3a;
+    transform: scale(1);
+  }
 }
