--- a/src/styles/Toast.module.css
+++ b/src/styles/Toast.module.css
@@ -4,8 +4,7 @@
   align-items: center;
   position: absolute;
   width: 100%;
-  margin-top: 64px;
-  opacity: 1;
+  margin-top: 78px;
 }
 
 .toast {
@@ -19,5 +18,16 @@
   width: 268px;
   height: 92px;
   border-radius: 4px;
-  opacity: 1;
+  opacity: 0.9;
+  animation: fadein;
+  animation-duration: 0.3s;
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.9;
+  }
 }
