--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -18,7 +18,7 @@
 }
 
 .gridWrapper {
-  margin: 40px 0;
+  margin: 20px 0;
 }
 
 .row {
@@ -27,11 +27,14 @@
 }
 
 .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 4px;
-  height: 70px;
+  height: calc(100vh / 15);
+  max-height: 70px;
   width: 60px;
-  font-size: 50px;
-  line-height: 66px;
+  font-size: 32px;
   border: 2px solid #3a3a3c;
 }
 
